# How-to-Create-an-AI-Powered-FAQ-Assistant-for-Enterprises

./: README.md  app.py  architecture_comparison.md  check_deps.py  detailed_test.py  direct_groq_test.py  faq.txt  feedback.py  final_transformation_report.md  hybrid_retriever.py  ingestion.py  langchain_test.py  main.py  mem.py  migration_summary.md  migration_to_groq.md  models.py  professional_theme_guide.md  professional_ui_guide.md  ratelimit_guide.md  requirements.txt  retriever.py  simple_test.py  start_all.py  start_backend.py  streaming.py  test_gemini.py  test_groq.py  test_imports.py  test_ratelimit.py  ui_comparison.md  ui_improvements.md  ui_transformation_summary.md  ui_transformation_v2.md
Agentic_AI/: README.md
Agentic_AI/Config_Companion/: app.py  main.py  pyproject.toml
Agentic_AI/Pipeline_Monitor/: main.py  requirements.txt
Agentic_AI/Pipeline_Monitor/agents/: detector_agent.py  knowledge_base_agent.py  recovery_agent.py  summarizer_agent.py  validator_agent.py
Agentic_AI/Pipeline_Monitor/dashboard/: streamlit_dashboard.py
Agentic_AI/Pipeline_Monitor/prefect_flows/: etl_flows.py
Agentic_AI/Pipeline_Monitor/simulation/: pipeline_simulator.py
Agentic_AI/auto_audit/: agents.py  app.py  config.py  requirements.txt
Agentic_AI/auto_audit/templates/: index.html  report.html
Agentic_AI/data_insight_team/: README.md  pyproject.toml
Agentic_AI/enterprise-rag-platform/: main.py  pyproject.toml  requirements.txt
Agentic_AI/enterprise-rag-platform/backend/: feedback.py  hybrid_retriever.py  ingestion.py  main.py  (+5 more)
vector_store/: chroma.sqlite3
(+6 files in other folders)
