[project]
name = "config-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.7.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
]